fix: cropped heart on 320px; Adjust preview image modal on 320px; Adjust preview modal close icon

--- a/blocks/card.css
+++ b/blocks/card.css
@@ -34,6 +34,7 @@
 .card__like-button {
   background: transparent url(../images/like-icon-State=Hover.svg) center
     no-repeat;
+  background-size: contain;
   padding: 0;
   width: 23px;
   height: 20px;
@@ -83,5 +84,7 @@
   .card__title {
     font-size: 16px;
     line-height: 1;
+    max-width: 90%;
+    padding-bottom: 2px;
   }
 }
